web_finalexam/css/body.css
@charset "utf-8";
body{
    margin: 0;
    padding: 0;
    background-image: url("../image/fll/system_image/IMG_E5419.jpeg");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    overflow-x: hidden;
    position: relative;
}

/* 背景不透明度覆盖层 */
body::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.3);
    pointer-events: none;
    z-index: 1;
}

::-webkit-scrollbar{
    width: 8px;
}

::-webkit-scrollbar-thumb{
    background: rgba(91, 105, 136, 0.8);
}

::-webkit-scrollbar-track{
    background: rgb(194, 213, 241);
}

.foot{
    margin-top: 0px;
    width: 100vw;
    height: 100px;
    float: left;
    clear: both;
    text-align: center;
    margin-bottom: 0px;
    background-color: rgba(84, 132, 161, 0.8);
    position: relative;
    z-index: 10;
}
.foot p{
    line-height: 10px;
    color: rgb(28, 43, 43);
}
/* 确保所有页面内容在蒙版之上 */
.mid, .chat-container, .board-container, .upload-section, .modal {
    position: relative;
    z-index: 10;
}

